register + get player for player page
